logs/param/build.make.121.log.stderr
/home/ros-industrial/HW8/src/param/src/pubvel_spiral.cpp: In function ‘int main(int, char**)’:
/home/ros-industrial/HW8/src/param/src/pubvel_spiral.cpp:54:11: error: assignment of read-only variable ‘ppose’
     ppose = turtle_pose.theta;
           ^
make[2]: *** [CMakeFiles/pubvel_spiral.dir/src/pubvel_spiral.cpp.o] Error 1
make[1]: *** [CMakeFiles/pubvel_spiral.dir/all] Error 2
make: *** [all] Error 2
